--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html",
+    "build": "parcel build index.html --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
     "sass": "^1.32.4"
   },
   "dependencies": {
+    "parcel-bundler": "^1.12.5",
     "sass-mq": "^5.0.1"
   }
 }
